2011-07-23 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/acinclude.m4, debugger/mcs51/configure: fix for solaris

2011-07-22 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCmem.c, src/SDCCopt.c: applied 2nd and 3rd part of patch
	  #2702889 - Summary of all uncommitted changes I applied on "my" SDCC
	  thanks Hubert Sack
	* support/regression/tests/compare_2_n.c: added

2011-07-21 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmain.c:
	  Reduce default value for --max-allocs-per-node to reduce compiler runtime.

2011-07-19 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: fixed MSVC 2010 compilation

2011-07-16 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c:
	  define BSD_COMP on Solaris so that gcc includes <sys/filio.h>
	  which defines FIONBIO

2011-07-15 Borut Razem <borut.razem AT gmail.com>

	* support/regression/tests/bug1665511.c:
	  fixed host regression test bus error crash on sparc Solaris

2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/peeph-z80.def:
	  Optimized jumptable generation.

2011-07-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCpeep.c:
	  labelJTInRange() fix, to ensure that jp by jr replacement is correct in jumptables.

2011-07-14 Borut Razem <borut.razem AT gmail.com>

	* device/include/pic16/pic18fregs.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/adc.h,
	  device/lib/pic16/libio/adc/adcsetch.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/Makefile.am,
	  device/non-free/include/pic16/pic18fam.h,
	  device/non-free/lib/pic16/libdev/Makefile.am,
	  device/non-free/lib/pic16/pics.all,
	  support/scripts/pic18fam-h-gen.pl,
	  device/non-free/include/pic16/pic18f26k22.h,
	  device/non-free/include/pic16/pic18f46k22.h,
	  device/non-free/include/pic16/pic18f23k22.h,